[package]
name = "lostlove-server"
version = "0.1.0"
edition = "2021"
authors = ["LostLove Contributors"]
description = "LostLove Protocol VPN Server"
license = "MIT"
repository = "https://github.com/Salamander5876/LostLove-Protocol"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Networking
socket2 = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Collections
dashmap = "5.5"
crossbeam = "0.8"

# Utilities
rand = "0.8"
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }

# TUN/TAP interface
tun = { version = "0.6", features = ["async"] }

# Configuration
clap = { version = "4.4", features = ["derive"] }

# Cryptography (Phase 2)
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
criterion = "0.5"

[[bin]]
name = "lostlove-server"
path = "src/main.rs"

[[bench]]
name = "packet_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
